// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lib/shopify addContributorTagToCustomer() hits the expected endpoint with a well-formed payload 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "https://TEST_SHOPIFY_API_KEY:TEST_SHOPIFY_API_SECRET@TEST_SHOPIFY_URI/admin/customers/1.json",
      Object {
        "customer": Object {
          "id": 1,
          "tags": "contributor,foo,bar",
        },
      },
    ],
  ],
  "results": Array [
    Object {
      "isThrow": false,
      "value": Promise {},
    },
  ],
}
`;

exports[`lib/shopify createCustomer() hits the expected endpoint with a well-formed payload 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "https://TEST_SHOPIFY_API_KEY:TEST_SHOPIFY_API_SECRET@TEST_SHOPIFY_URI/admin/customers.json",
      Object {
        "customer": Object {
          "accepts_marketing": true,
          "email": "test@example.com",
          "first_name": "Test",
          "metafields": Array [
            Object {
              "key": "github",
              "namespace": "global",
              "value": "octocat",
              "value_type": "string",
            },
          ],
          "tags": "contributor",
        },
      },
    ],
  ],
  "results": Array [
    Object {
      "isThrow": false,
      "value": Promise {},
    },
  ],
}
`;

exports[`lib/shopify createShopifyCustomer() doesn’t sign the user up for emails if they didn’t subscribe 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "https://TEST_SHOPIFY_API_KEY:TEST_SHOPIFY_API_SECRET@TEST_SHOPIFY_URI/admin/customers.json",
      Object {
        "customer": Object {
          "accepts_marketing": false,
          "email": "test@example.org",
          "first_name": "Test",
          "metafields": Array [
            Object {
              "key": "github",
              "namespace": "global",
              "value": "testuser",
              "value_type": "string",
            },
          ],
          "tags": "contributor",
        },
      },
    ],
  ],
  "results": Array [
    Object {
      "isThrow": false,
      "value": Promise {},
    },
  ],
}
`;

exports[`lib/shopify createShopifyCustomer() hits the expected endpoint with a well-formed payload 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "https://TEST_SHOPIFY_API_KEY:TEST_SHOPIFY_API_SECRET@TEST_SHOPIFY_URI/admin/customers.json",
      Object {
        "customer": Object {
          "accepts_marketing": true,
          "email": "test@example.org",
          "first_name": "Test",
          "metafields": Array [
            Object {
              "key": "github",
              "namespace": "global",
              "value": "testuser",
              "value_type": "string",
            },
          ],
          "tags": "contributor",
        },
      },
    ],
  ],
  "results": Array [
    Object {
      "isThrow": false,
      "value": Promise {},
    },
  ],
}
`;

exports[`lib/shopify getCustomerByEmail() hits the expected endpoint with a well-formed payload 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "https://TEST_SHOPIFY_API_KEY:TEST_SHOPIFY_API_SECRET@TEST_SHOPIFY_URI/admin/customers/search.json",
      Object {
        "query": "jason@gatsbyjs.com",
      },
    ],
  ],
  "results": Array [
    Object {
      "isThrow": false,
      "value": Promise {},
    },
  ],
}
`;
